<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="@dimen/dimen_300"
        android:layout_height="@dimen/dimen_300"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/login_background"
        app:cardCornerRadius="@dimen/dimen_6"
        app:cardElevation="@dimen/dimen_3"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45"
                android:layout_marginTop="@dimen/dimen_10">

                <View
                    android:layout_width="@dimen/dimen_8"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_50"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_size_18"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_login_to_register"
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="@dimen/dimen_30"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:src="@drawable/ic_add_account" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/dimen_30"
                android:paddingStart="@dimen/dimen_50">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/user_phone"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/go"
                    android:textColor="#d3d3d3" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/forget_your_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>