<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adapter_content_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_5"
    android:orientation="vertical"
    app:cardBackgroundColor="#0000"
    app:cardCornerRadius="@dimen/dimen_4"
    app:cardElevation="@dimen/dimen_8">


    <LinearLayout
        android:id="@+id/adapter_content_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/adapter_content_child_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_done"
                android:layout_width="@dimen/dimen_70"
                android:layout_height="@dimen/dimen_70"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/dimen_5"
                android:src="@drawable/header"
                android:visibility="gone" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/et_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dimen_5"
                android:gravity="center"
                android:padding="@dimen/dimen_15"
                android:textSize="@dimen/font_size_20" />

        </LinearLayout>

        <TextView
            android:id="@+id/adapter_content_done"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/scroll_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/adapter_content_edit"
            android:layout_width="@dimen/dimen_60"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/scroll_color"
            android:textSize="@dimen/font_size_20" />

        <TextView
            android:id="@+id/adapter_content_delete"
            android:layout_width="@dimen/dimen_60"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/scroll_color"
            android:textSize="@dimen/font_size_20" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2"
        android:layout_alignParentBottom="true"
        android:background="#000000" />
</android.support.v7.widget.CardView>